# hire-a-human-backend-scratch

./: .gitignore  README.md  chat_agent.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  test.py
database/: schema.sql  triggers.sql
docs/: SRS_Schema.md
src/: auth.py  config.py  database.py  mcp_server.py
src/models/: __init__.py  admin.py  engineer.py  recruiters.py
src/repositories/: admin_repo.py  engineer_repo.py  recruiter_repo.py  thread_repo.py
src/routers/: admin.py  agent.py  engineers.py  recruiters.py
src/services/: agent_service.py
