[project]
name = "hire-a-human-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "deepagents>=0.4.12",
    "fastapi>=0.135.2",
    "fastmcp>=3.2.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openrouter>=0.2.1",
    "langgraph-checkpoint-postgres>=3.0.5",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.42.0",
]
